[tool.poetry]
name = "test-fast"
version = "0.1.0"
description = ""
authors = ["Dartty123 <dariyatamanuk@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.10"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
